# archivist-desktop

./: .gitignore  ARCHIVIST_NODE_COMMIT  CLAUDE.md  QA-FEEDBACK.md.txt  QA-RUNBOOK.md  README.md  SETUP_COMPLETE.md  TEST-DIAGNOSTICS.md  TESTING-PLAN.md  WINDOWS-TESTING.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/: CICD_SETUP.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
e2e/: dual-instance.ts  helpers.ts  launch-second-instance.ps1  package-lock.json  package.json  playwright.config.ts  selectors.ts  tsconfig.json  wdio.conf.ts
e2e/app-e2e/: README.md  playwright.config.ts  tsconfig.json
e2e/playwright/: playwright.config.ts  smoke.spec.ts  tsconfig.json
e2e/stress/: README.md  upload-stress-test.ps1  upload-stress-test.sh
e2e/tests/: 00-smoke-all-ui.spec.ts  01-onboarding.spec.ts  02-dashboard.spec.ts  03-files.spec.ts  04-logs.spec.ts  05-settings.spec.ts  06-devices.spec.ts  07-file-operations.spec.ts  08-media-download.spec.ts  09-streaming-hub.spec.ts  09-web-archive.spec.ts  10-stremio-addons.spec.ts  11-iptv.spec.ts  12-debrid-config.spec.ts  (+23 more)
scripts/: download-sidecar.sh  release-test.sh  run-app-e2e.ps1  run-e2e.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: nsis-hooks.nsi  postinst.sh
src-tauri/sidecars/: DEVNET-SIDECAR-BUILD.md  README.md
src-tauri/src/: error.rs  features.rs  lib.rs  node_api.rs  path_utils.rs  state.rs
src-tauri/src/commands/: archive.rs  chat.rs  debrid.rs  files.rs  iptv.rs  irc.rs  marketplace.rs  media.rs  mod.rs  node.rs  streaming.rs  stremio.rs  sync.rs  torrent.rs  wallet.rs
src-tauri/src/crypto/: group_sessions.rs  identity.rs  key_store.rs  mod.rs  safety_numbers.rs  sessions.rs
src-tauri/src/services/: archive_viewer.rs  backup.rs  backup_daemon.rs  binary_manager.rs  chat_delivery_queue.rs  chat_message_store.rs  chat_server.rs  chat_service.rs  chat_tls.rs  chat_tofu.rs  chat_types.rs  config.rs  debrid.rs  discourse_scraper.rs  discourse_site_builder.rs  files.rs  iptv.rs  irc.rs  manifest_server.rs  marketplace.rs  media_download.rs  media_streaming.rs  mod.rs  node.rs  peers.rs  stremio_client.rs  sync.rs  torrent.rs  wallet.rs  web_archive.rs
src-tauri/tests/: chat_integration.rs  discourse_integration.rs  integration_test.rs
(+109 files in other folders)
