[package]
name = "archivist-desktop"
version = "0.2.0"
description = "Archivist - Decentralized File Storage Desktop Client"
authors = ["Durability Labs"]
license = "MIT"
repository = "https://github.com/durability-labs/archivist-desktop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "archivist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
zk-proofs = []

[build-dependencies]
tauri-build = { version = "2.5.3", features = ["codegen"] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# File system utilities
notify = "6.1"
dirs = "6.0"
mime_guess = "2.0"

# Networking
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
urlencoding = "2.1"
warp = { version = "0.3", features = ["tls"] }

# Web scraping / archiving
scraper = "0.20"
url = "2.5"

# Streaming I/O
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# Encoding
base64 = "0.22"
bs58 = "0.5"

# Regex for parsing yt-dlp progress output
regex = "1.10"

# Chat / crypto
async-trait = "0.1"
vodozemac = "0.7"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"
tokio-rustls = "0.26"
zeroize = { version = "1", features = ["derive"] }
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

# Zip archive support for ffmpeg extraction (Windows)
zip = "2.2"

# BitTorrent engine
librqbit = "8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
toml = "0.8"

# Unix process management
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3.13"
rstest = "0.23"
wiremock = "0.6"
